# Dark-Nova-Multi-Dimensional-Gravastar

./: .gitignore  AGENTS.md  Current goal  Makefile  README.md  ROADMAP.md  pyproject.toml
artifacts/: README.md
benchmarks/: README.md
configs/: d4_adamw_fp32_50m_comparison.json  d4_adamw_fp32_50m_second_seed_pair.json  d4_adamw_fp32_50m_third_seed_pair.json  d4_adamw_fp32_matched_comparison.json  d5_hf_balanced_materialization.json  smoke.yaml
data/: README.md
research/: 00_project_charter.md  01_environment.md  02_problem_definition.md  03_prior_art.md  04_hypotheses.md  05_candidate_architectures.md  06_design_selection.md  07_experiment_plan.md  08_routing_results.md  09_compression_results.md  10_importance_results.md  11_lookup_results.md  12_continual_evolution.md  13_data_governance.md  14_security_threat_model.md  15_on_prem_architecture.md  16_integrated_results.md  17_final_assessment.md  18_ds4_source_audit.md  19_real_training_transition_audit.md  20_rocm_rdna4_vllm_notes.md  21_matched_adamw_probe_results.md  22_50m_adamw_dense_candidate_results.md  23_trained_checkpoint_quantization.md  24_d4_tokenizer_efficiency_probe.md  25_d5_materialization_results.md  26_d5_tokenizer_efficiency_comparison.md  27_t12_second_seed_summary.md  28_t12_three_seed_summary.md  29_d5_tokenizer_training_comparison.md  30_idea_foundry_candidates.md  31_if2_fast_weight_continual_probe.md  32_if3_block_codebook_probe.md  33_d4_executable_javascript_probe.md  34_repository_balanced_executable_benchmark.md  35_if4_fast_repository_adaptation.md  37_if7_hebbian_trained_model.md  (+31 more)
(+331 files in other folders)
